Archive2/4f/2f2608fb2b698d/output
main.cpp: In function ‘void safe_increment()’:
main.cpp:11:5: error: ‘cout’ is not a member of ‘std’
     std::cout << g_i;
     ^
